# duplicate_reports

./: .gitignore  README.md  duplicate_reports.ipynb  pyproject.toml  text_duplicate_detection.ipynb
notebook/: text_duplicate_detection.ipynb
scripts/: scripts.py
